--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 * {
   box-sizing: border-box;
   padding: 0;
@@ -5,12 +6,14 @@
 }
 
 html,
-body {
+body{
   max-width: 100vw;
 }
 
 body{
   padding: 26px 70px;
+  font-family: 'Roboto', sans-serif;
+  color: #2E2E33;
 }
 
 a {
