--- a/styles/Banner.module.scss
+++ b/styles/Banner.module.scss
@@ -1,6 +1,6 @@
 .banners{
-    max-height: 437px;
-    max-width: 437px;
+    height: fit-content;
+    width: fit-content;
     display: flex;
     flex-direction: column;
     p{
