fixed cards list

--- a/styles/CardsPage.module.scss
+++ b/styles/CardsPage.module.scss
@@ -1,7 +1,8 @@
 .main{
-    display: flex;
+
     ul{
         display: flex;
         flex-wrap: wrap;
+        justify-content: space-between;
     }
 }
