--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -1,5 +1,6 @@
-$card-border: #F5F5F7;
+$lightGray: #F5F5F7;
 $button-green: #00B177;
-$button-purple: #4056A1;
+$button-blue: #4056A1;
 $red: #FF0000;
 $gray: #999999;
+$black: #2E2E33;
