--- a/styles/Card.module.scss
+++ b/styles/Card.module.scss
@@ -8,13 +8,34 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
     .container{
         width: 100%;
-        .category{
+        .rating{
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
             color: $gray;
             margin: 12px 0 3px;
             font-size: 12px;
             line-height: 20px;
+            &__amount{
+                display: flex;
+                align-items: center;
+                p{
+                    text-decoration: underline;
+                }
+                span{
+                    background-image: url('../public/star.svg');
+                    margin: 0 2px;
+                    width: 13px;
+                    height: 13px;
+                }
+                .empty{
+                    background-image: url('../public/emptyStar.svg');
+                }
+            }
         }
         .title{
             font-size: 14px;
@@ -84,10 +105,20 @@
             }
         }
         .warning_message{
+            width: 100%;
             font-size: 12px;
             font-weight: 500;
+            margin-bottom: 5px;
             text-align: center;
-            margin-top: 10px;
+            position: absolute;
+            text-align: center;
+            bottom: 0;
+            left: 0;
         }
+    }
+    .bestseller{
+        position: absolute;
+        top: 10px;
+        right: 10px;
     }
 }
