--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -1,6 +1,7 @@
-$lightGray: #F5F5F7;
-$button-green: #00B177;
-$button-blue: #4056A1;
-$red: #FF0000;
+$lightGrayBg: #ebebec;
+$lightGray: #dbdbdb;
 $gray: #999999;
+$green: #00B177;
+$blue: #4056A1;
+$red: #FF0000;
 $black: #2E2E33;
