--- a/styles/Form.module.scss
+++ b/styles/Form.module.scss
@@ -5,7 +5,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    label{
+        font-size: 12px;
+        margin-top: 12px;
+    }
     input{
         height: 40px;
         padding: 3px 12px;
@@ -20,5 +23,6 @@
         background-color: #FFF;
         border: solid 1px #2E2E33;
         border-radius: 15px;
+        margin-top: 12px;
     }
 }
