--- a/styles/Form.module.scss
+++ b/styles/Form.module.scss
@@ -1,28 +1,34 @@
-.form{
-    width: fit-content;
-    height: 100vh;
+.form_container{
     margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    label{
-        font-size: 12px;
-        margin-top: 12px;
-    }
-    input{
-        height: 40px;
-        padding: 3px 12px;
-        margin: 5px 0;
-        border-width: 1px;
-        border-radius: 10px;
-        font-size: 16px;
-        color: #2E2E33;
-    }
-    button{
-        padding: 5px 15px;
-        background-color: #FFF;
-        border: solid 1px #2E2E33;
-        border-radius: 15px;
-        margin-top: 12px;
+    background-color: rgb(87, 182, 219);
+    width: 500px;
+    height: 700px;
+    .form{
+        width: fit-content;
+        height: 100%;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        label{
+            font-size: 12px;
+            margin-top: 12px;
+        }
+        input{
+            height: 40px;
+            padding: 3px 12px;
+            margin: 5px 0;
+            border-width: 1px;
+            border-radius: 10px;
+            font-size: 16px;
+            color: #2E2E33;
+        }
+        button{
+            padding: 5px 15px;
+            background-color: #FFF;
+            border: solid 1px #2E2E33;
+            border-radius: 15px;
+            margin-top: 12px;
+        }
     }
 }
