--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,6 +9,10 @@ html,
 body{
   width: 100%;
   height: 100%;
+}
+
+body{
+  margin: 0 auto;
   font-family: 'Roboto', sans-serif;
   color: #2E2E33;
 }
