--- a/styles/Form.module.scss
+++ b/styles/Form.module.scss
@@ -1,10 +1,16 @@
 .form_container{
     margin: 0 auto;
-    background-color: rgb(87, 182, 219);
+    background-color: #99DDFF;
+    border-radius: 15px;
     width: 500px;
     height: 700px;
+    padding: 20px 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     .form{
-        width: fit-content;
+        width: 100%;
         height: 100%;
         margin: 0 auto;
         display: flex;
