--- a/styles/Form.module.scss
+++ b/styles/Form.module.scss
@@ -1,40 +1,50 @@
-.form_container{
-    margin: 0 auto;
-    background-color: #99DDFF;
-    border-radius: 15px;
-    width: 500px;
-    height: 700px;
-    padding: 20px 30px;
+.wrapper{
+    width: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    .form{
-        width: 100%;
-        height: 100%;
-        margin: 0 auto;
+    .form_container{    
+        background-color: #99DDFF;
+        border-radius: 15px;
+        width: 500px;
+        padding: 20px 30px;
         display: flex;
-        flex-direction: column;
         justify-content: center;
-        label{
-            font-size: 12px;
-            margin-top: 12px;
-        }
-        input{
-            height: 40px;
-            padding: 3px 12px;
-            margin: 5px 0;
-            border-width: 1px;
-            border-radius: 10px;
-            font-size: 16px;
-            color: #2E2E33;
-        }
-        button{
-            padding: 5px 15px;
-            background-color: #FFF;
-            border: solid 1px #2E2E33;
-            border-radius: 15px;
-            margin-top: 12px;
+        align-items: center;
+        flex-direction: column;
+        .form{
+            width: 100%;
+            height: 100%;
+            margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            label{
+                font-size: 12px;
+                margin-top: 12px;
+            }
+            input{
+                height: 40px;
+                padding: 3px 12px;
+                margin: 5px 0;
+                border: none;
+                border-radius: 5px;
+                font-size: 16px;
+                color: #2E2E33;
+            }
+            .button_container{
+                display: flex;
+                justify-content: center;
+                margin-top: 12px;
+                button{
+                    padding: 5px 15px;
+                    background-color: #FFF;
+                    border: solid 1px #2E2E33;
+                    border-radius: 15px;
+                    width: 120px;
+                }
+            }
         }
     }
 }
