--- a/styles/Form.module.scss
+++ b/styles/Form.module.scss
@@ -20,6 +20,10 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
+            p{
+                font-size: 12px;
+                text-align: center;
+            }
             label{
                 font-size: 12px;
                 margin-top: 12px;
@@ -43,6 +47,7 @@
                     border: solid 1px #2E2E33;
                     border-radius: 15px;
                     width: 120px;
+                    cursor: pointer;
                 }
             }
         }
