--- a/styles/Form.module.scss
+++ b/styles/Form.module.scss
@@ -1,11 +1,18 @@
+@import './colors.scss';
 .wrapper{
+    position: fixed;
+    z-index: 3;
+    background-color: #00000050;
     width: 100%;
     height: 100vh;
+    top: 0;
+    left: 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    color: $black;
     .form_container{    
-        background-color: #99DDFF;
+        background-color: $white;
         border-radius: 15px;
         width: 500px;
         padding: 20px 30px;
@@ -13,6 +20,14 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        position: relative;
+        svg{
+            position: absolute;
+            top: 15px;
+            right: 15px;
+            cursor: pointer;
+            color: $black;
+        }
         .form{
             width: 100%;
             height: 100%;
@@ -32,7 +47,7 @@
                 height: 40px;
                 padding: 3px 12px;
                 margin: 5px 0;
-                border: none;
+                border: solid 1px $black;
                 border-radius: 5px;
                 font-size: 16px;
                 color: #2E2E33;
@@ -43,11 +58,17 @@
                 margin-top: 12px;
                 button{
                     padding: 5px 15px;
-                    background-color: #FFF;
-                    border: solid 1px #2E2E33;
-                    border-radius: 15px;
+                    background-color: $white;
+                    border: solid 1px $black;
+                    border-radius: 4px;
                     width: 120px;
+                    height: 40px;
                     cursor: pointer;
+                    transition: .2s;
+                    &:hover{
+                        background-color: $black;
+                        color: $white;
+                    }
                 }
             }
         }
