--- a/styles/Form.module.scss
+++ b/styles/Form.module.scss
@@ -28,6 +28,9 @@
             cursor: pointer;
             color: $black;
         }
+        h3{
+            font-size: 24px;
+        }
         .form{
             width: 100%;
             height: 100%;
